welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:5: error: type mismatch;
 found   : Unit
 required: String
     else{if(a%3==0){return "Fizz"}else{return  }
                                        ^